--- a/index.html
+++ b/index.html
@@ -18,12 +18,20 @@
         <img src="src/images/heart.png" alt="">
         <img src="src/images/Cart.png" alt="">
         <img src="src/images/User.png" alt="">
-        <img class="search" src="src/images/icon _search.png" alt="">
+        <div class="input-group rounded">
+          <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
+          <span class="input-group-text border-0" id="search-addon">
+            <img class="search-icon" src="src/images/icon_search.png" alt="">
+          </span>
+        </div>
     </div>
  
     <div class="line" style="border-bottom: solid 1px #d71212"></div>
 
-<div class="header-logo"><img src="src/images/logo.png" alt=""></div>
+<div class="header-logo">
+  <div class="logo red"><h1>Red&nbsp;</h5></div>
+  <div class="logo cat"><h1>Cat</h1></div>
+</div>
 <div class="header-nav">
     <div class="nav-item">Каталог</div>
     <div class="nav-item">Бренды</div>
